started fixing